samples/_failures_safe/1761224752_c30d26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a94081d8.c: In function ‘main’:
./samples/SAFE/__tmp_a94081d8.c:128:5: error: expected expression at end of input
  128 |     if (scanf("%u",
      |     ^~
./samples/SAFE/__tmp_a94081d8.c:128:5: error: expected declaration or statement at end of input
